yaml/03-deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: pipeline-demo
  name: pipeline-demo
spec:
  replicas: 1
  selector:
    app: pipeline-demo
    deploymentconfig: pipeline-demo
  template:
    metadata:
      labels:
        app: pipeline-demo
        deploymentconfig: pipeline-demo
    spec:
      containers:
      - image: pipeline-demo:latest
        imagePullPolicy: Always
        name: pipeline-demo
        ports:
        - containerPort: 8080
          protocol: TCP
  triggers:
  - imageChangeParams:
      containerNames:
      - pipeline-demo
      from:
        kind: ImageStreamTag
        name: pipeline-demo:latest
    type: ImageChange
