yaml/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: summit-demo
  name: summit-demo
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: summit-demo
    deploymentconfig: summit-demo
