yaml/05-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: summit-demo
  name: summit-demo
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: summit-demo
